--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+ body {
     width: 100%;
     height: 100vh;
     margin: 0;
@@ -8,7 +8,7 @@ body {
     font-size: 16px;
   }
 
-#intro{
+.intro{
     margin: 1em auto;
     text-align: center;
 }
@@ -55,14 +55,18 @@ body {
     margin: 0 0.5em 0 0;
     vertical-align: middle;
   }
-  
+
+  .inline{
+    display: inline; 
+  }
+
   input[type="submit"] {
     display: block;
     width: 60%;
     margin: 1em auto;
     height: 2em;
     font-size: 1.1rem;
-    background-color: #3b3b4f;
+    background-color: #385170;
     border-color: white;
     min-width: 300px;
   }
@@ -70,7 +74,14 @@ body {
   input[type="file"] {
     padding: 1px 2px;
   }
-  
-  .inline{
-    display: inline; 
-  }
+
+  input[type="checkbox"] {
+    padding: 1px 2px;
+    display: inline-block;
+    margin-right: 0.625rem;
+    min-height: 1.25rem;
+    min-width: 1.25rem;
+    margin: 10px 0 0 0;
+    width: 100%;
+  } 
+
